# Lunar-Flashes

./: .gitignore  .gitmodules  CMakeLists.txt  ConcurrentFileIOBuffer.h  DoubleBuffer.h  HighSpeedAlliedVision.service  HighSpeedAlliedVisionInterface.service  Image.h  ImageConvert copy.h  ImageConvert.h  ImageHistogram.h  ImageToJPEG.h  ImageToTIFF.h  LunarFlashes.service  LunarFlashesWebInterface.service  MQTTLog.h  README.md  UWA-Gingin-telescope-meeting.odp  install-all.sh  install.sh  main.cpp  system-diagram.drawio
image-unpacker/: CMakeLists.txt  avi.cpp  avimaker.py  decode-directory.sh  detect.cpp  diff.cpp  fits.cpp  image-unpacker  main.cpp  makefile
webpage/: app.py
webpage/static/: package-lock.json  package.json
webpage/static/js/: main.js
webpage/templates/: index.html
